resolution fix on smaller displays - fixes #115

--- a/core/rpc/html/css/style.css
+++ b/core/rpc/html/css/style.css
@@ -1870,8 +1870,8 @@ ago control Styles
     -webkit-border-radius: 10px;
     -khtml-border-radius: 10px;
     border-radius: 10px;
-    height: 155px;
-    min-height: 120px;
+    height: 100%;
+    min-height: 155px;
     background-color: #FFFFFF;
     background-image: url(../img/grid-item-bg.gif);
     background-repeat: repeat-x;
